update package file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-package",
+  "name": "demo-package-rolling-thunder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
